--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
             content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
         />
         <title>Heart</title>
+        <style>
+            body {
+                background-color: black;
+            }
+        </style>
         <link rel="stylesheet" href="styles.css" />
         <link rel="manifest" href="manifest.json" />
     </head>
